Version 0.11.1 "Tobago" -- Subversion
-----------------

* Changed location of the logo image in the default
stylesheet. 
* Fixed a bug with the stylesheet query not returning
media types.
* Fixed a bug with GetAllContent that was causing
the Link content type to fail.
* Fixed a bug with CreatePermission not working with
the mysqli driver.
* Fixed a bug with the Dutch translation that was
causing logins to the admin to fail.

Version 0.11 "Trinidad" -- Dec 03 2005
-----------------

* Added ability to set a media type for a stylesheet
* Added some database checks to installer.  Should help to
stop some install problems people are having.
* Added ability to link to an anchor with cms_selflink
* Added CSSMenu module and made it the default menu for new
installs
* Added ability to copy a stylesheet
* Added id and class parameters to the cms_selflink tag
* Added apply button to editing HTML Blobs
* Added Japanese translation
* Added Polish translation
* Added Russian translation
* Added UninstallPreMessage() to module API
* Changed encoding handling.  Now all admin encodings are
utf-8 with a mechanism for backwards compatibility
* Changed the default WYSIWYG to FCKeditorX
* Changed {content}, {html_blob} and {title} tags to be case
insensitive
* Changed logic of included htaccess so that html can be used
as the default extension for friendly urls
* Fixed a potential security issue with being able to edit
image files directly from the image manager
* Fixed a bug where additional content blocks would disappear
after a page was set inactive.  Fixed by adding a Load()
callback for content types.
* Fixed a bug with $gCms->variables['page_name'] not always
returning the alias
* Fixed a bug where IIS users couldn't login correctly
* Fixed a bug where IIS didn't always report QUERY_STRING, which
would generate a warning message
* Fixed a bug where all users can't get to user preferences
* Fixed a bug where css assocations did not get deleted when a
template does